	* src/journal.c. ghtml/C/query.ghtml: Start using SQL and 
	  SQL parser to construct user-defined report queries.
	* src/menucmd.c, src/ctree.c: fix sourceforge bug
	  [ 898481 ] inconsistency with Cut and Paste
	* ghtml/C/gtt.scm: fix sourceforge bugs
	  [ 667286 ] filter failing in invoice
	  [ 847917 ] Bill/Paid/Hold Filter fails when 1 item is not Billable

Sat Apr 3 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.1.8 release: tag gnotime-2-1-8
	* ghtml.c, main.c: port from deprecated guile gh_* interface to 
	  new shiny scm_* interface.
	* Apply patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	  sourceforge patch [ 871052 ] documentation build update
	* Apply sourceforge patch [ 874752 ] I18N and install of gconf schema file
	  from Toshio Kuratomi - abadger1999
	* Apply sourceforge patch [ 927843 ] Fixes handling of return key
	  from Goedson Teixeira Paixao <goedson@debian.org>

Tue Dec  23 2003 Toshio Kuratomi <toshio@tiki-lounge.com>
	* src/main.c: using signal(SIGCHLD, SIG_IGN) to reap zombie processes
	  is not portable and was causing yelp, the gnome help browser to
	  crash when it was invoked to handle gnotime help.  Create two
	  alternate methods with configure idefs to choose between them.
	* configure.in: New tests to select which method to use to reap
	  zombie processes.  Each test relies on certain functions in the
	  standarc libc.

Fri Dec  20 2003 Toshio Kuratomi <toshio@tiki-lounge.com>
	* src/toolbar.c: Call to gnome_help_display was wrong for GNOME2.
	  Changed it to follow the new syntax.
	* src/menus.c: Change the GNOMEUIINFO_HELP to reference gnotime instead
	  of gtt.

Fri Dec  19 2003 Toshio Kuratomi <toshio@tiki-lounge.com>
	* doc/C/gnotime.xml: The graphic tags were attempting to access the
	  screenshots with filenames without extensions.  I added the .png
	  extension and it all works now.
	* autogen.sh: Add some env variable definitions to the invocation of